# OpenTeddy

./: .gitignore  CLAUDE.md  README.md  build_etim_lancedb.py  createdockerimage.sh  main.py  pyproject.toml  skills_manager.py  startserver.sh
agentic/: agent.py  baseagent.py  etimagent.py  logger.py
agentic/general/skills/etim-lookup/: SKILL.md  etim_search.py
agentic/general/tools/: readonly_backend.py  sandbox.py
agentic/servers/: chat_server.py  embedding_server.py
docker/: dockerfile
docs/: skills_manager.md
frontend/: app.js  etim-card.html  index.html  style.css
models/multilingual-e5-base/: config.json  config_sentence_transformers.json
